--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha01'
     implementation 'androidx.viewpager:viewpager:1.0.0'
 
+
+    implementation "io.reactivex.rxjava3:rxjava:3.0.4"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+
 }
