--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,5 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
 
-
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
 }
