--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,10 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
-    viewBinding {
-        enabled = true
-    }
+    buildFeatures{
 
+         viewBinding = true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -46,7 +46,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta7'
     implementation 'com.github.xiangtailiang:tablayout:1.0.0'
     implementation 'com.google.android.material:material:1.3.0-alpha01'
     implementation 'androidx.viewpager:viewpager:1.0.0'
@@ -57,4 +57,9 @@ dependencies {
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
 
     implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
+
+
+// fast stroll view using recyclerview
+
+    implementation 'com.github.kabouzeid:RecyclerView-FastScroll:1.0.16-kmod'
 }
