--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
 
     implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
 }
