--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
-    buildFeatures{
-         viewBinding = true
+    buildFeatures {
+        viewBinding true
     }
     buildTypes {
         release {
