add mv and play mv

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--suppress AndroidDomInspection -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.trantri.tdt_music">
@@ -10,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_foreground"
         android:label="@string/app_name"
@@ -17,15 +17,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activity.VideoPlayerActivity"></activity>
         <activity android:name=".activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity">
-
-        </activity>
+        <activity android:name=".activity.MainActivity"></activity>
         <activity android:name=".activity.SongsListActivity" />
         <activity android:name=".activity.PlaylistActivity" />
         <activity android:name=".activity.DanhSachAllChuDeActivity" />
@@ -33,18 +33,11 @@
         <activity android:name=".activity.DanhSachAllAlbumActivity" />
         <activity android:name=".activity.PlayMusicActivity" />
         <activity
-            android:name=".activity.PlayVideoActivity"
-            android:configChanges="orientation|screenSize" />
-        <activity
-            android:name=".activity.MediaplayerVideoActivity"
-            android:screenOrientation="landscape" />
-        <activity
             android:name=".activity.KaraokeActivity"
             android:configChanges="screenSize|orientation" />
         <activity
             android:name=".activity.PlayVideoKaraokeActivity"
-            android:screenOrientation="landscape">
-        </activity>
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
