--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
 // fast stroll view using recyclerview
     implementation 'com.github.kabouzeid:RecyclerView-FastScroll:1.0.16-kmod'
+
+    // gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
