--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activity.VideoPlayerActivity"></activity>
+        <activity android:name=".activity.VideoPlayerActivity" />
         <activity android:name=".activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,19 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.SongsListActivity" />
         <activity android:name=".activity.PlaylistActivity" />
         <activity android:name=".activity.DanhSachAllChuDeActivity" />
         <activity android:name=".activity.DanhSachTheLoaiTheoChuDeActivity" />
         <activity android:name=".activity.DanhSachAllAlbumActivity" />
         <activity android:name=".activity.PlayMusicActivity" />
-        <activity
-            android:name=".activity.KaraokeActivity"
-            android:configChanges="screenSize|orientation" />
-        <activity
-            android:name=".activity.PlayVideoKaraokeActivity"
-            android:screenOrientation="landscape"></activity>
+        <service android:name=".activity.PlayMusicService"/>
     </application>
 
 </manifest>
