--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,9 @@ android {
 
 dependencies {
     def room_version = "2.2.5"
+    def lifecycle_version = "2.2.0"
+
     implementation 'com.android.support:multidex:1.0.3'
-
-
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
@@ -69,9 +69,19 @@ dependencies {
     // gson
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    // room
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
-    implementation "androidx.room:room-guava:$room_version"
+    // Room
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    implementation "androidx.room:room-rxjava2:2.2.5"
     testImplementation "androidx.room:room-testing:$room_version"
+    testImplementation "android.arch.persistence.room:testing:$room_version"
+
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    // viewModel
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+
 }
